load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_pkg//pkg:verify_archive.bzl", "verify_archive_test")
load("@rules_synology//:defs.bzl", "spk_component")

copy_file(
    name = "spk",
    src = "//spk/consul:spk",
    out = "spk.tar",
)

verify_archive_test(
    name = "spk_container_contains_user_unit",
    max_size = 30,
    must_contain = [
        "conf/systemd/pkg-user-consul.service",
    ],
    target = ":spk",
)
